# ticket-auto-responder

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: settings.py
